Refactor code structure for improved readability and maintainability

--- a/src/content/games/cinco-vidas.mdx
+++ b/src/content/games/cinco-vidas.mdx
@@ -2,7 +2,7 @@
 title: 5 vidas
 description: 5 vidas es un juego de cartas de predicción y estrategia en el que debes acertar cuántas rondas ganarás... o morir en el intento.
 addedAt: 2025-07-31
-coverImage: ../../assets/cuadrado/portada.png
+coverImage: ../../assets/cuadrado/thumbnail.png
 tags:
   - cards
   - poker
@@ -15,12 +15,12 @@ tags:
 
 **5 vidas** es un juego de cartas competitivo donde no basta con ganar... hay que predecirlo. El objetivo es **acertar cuántas rondas vas a ganar por mano**, evitando pasarte o quedarte corto. Cada error te cuesta vidas, y cuando un jugador las pierde todas, se acaba la partida.
 
-Se puede jugar con **mazo español (1–12)** o **mazo de póker (usando 1–12)**, retirando las cartas sobrantes.
+Se puede jugar con **mazo español (1 - 12)** o **mazo de póker (usando 1 - 12)**, retirando las cartas sobrantes.
 
 ## Componentes
 
-- 1 mazo de cartas numéricas (1–12 por palo, 48 cartas en total).
-- 2–6 jugadores.
+- 1 mazo de cartas numéricas (1 - 12 por palo, 48 cartas en total).
+- 2 - 6 jugadores.
 - Algo para llevar cuenta de vidas (fichas, monedas, dedos, lo que sea).
 
 ## Objetivo del juego
