Refactor code structure for improved readability and maintainability

--- a/src/content/games/cinco-vidas.mdx
+++ b/src/content/games/cinco-vidas.mdx
@@ -2,7 +2,7 @@
 title: 5 vidas
 description: 5 vidas es un juego de cartas de predicción y estrategia en el que debes acertar cuántas rondas ganarás... o morir en el intento.
 addedAt: 2025-07-31
-coverImage: ../../assets/cuadrado/thumbnail.png
+coverImage: ../../assets/cuadrado/thumbnail.webp
 tags:
   - cards
   - poker
