--- a/src/content/games/cuadrado.mdx
+++ b/src/content/games/cuadrado.mdx
@@ -2,14 +2,14 @@
 title: Cuadrado
 description: El Cuadrado es un juego de cartas para reducir al máximo tu puntuación utilizando un mazo de póker.
 addedAt: 2025-06-08
-coverImage: ../../assets/cuadrado/thumbnail.png
+coverImage: ../../assets/cuadrado/thumbnail.webp
 tags: 
   - cards
   - poker
   - españolas
 ---
 import { Image } from 'astro:assets';
-import initial from '../../assets/cuadrado/initial.png';
+import initial from '../../assets/cuadrado/initial.webp';
 
 # El Cuadrado: Resumen del Juego de Cartas
 
